<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/login_title_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_title_text"
        android:textAlignment="center"
        android:textColor="@color/White_Out"
        android:textSize="35sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_textinputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/login_username_edittext"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="20dp"
          android:layout_marginLeft="70dp"
          android:layout_marginRight="70dp"
          android:hint="@string/username_hint_text"
          android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_textinputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/login_password_edittext"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/password_hint_text"
          android:inputType="text|textWebPassword"
          android:password="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="190dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:shadowRadius="10"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowColor="@color/Black"
        android:padding="0dp"
        android:text="@string/login_button_text"
        android:textColor="@color/White_Out"
        android:textSize="20sp"
        app:strokeWidth="0dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/register_title_text"
        android:textAlignment="center"
        android:textColor="@color/White_Out"
        android:textSize="14sp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="190dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:shadowRadius="10"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowColor="@color/Black"
        android:padding="0dp"
        android:text="@string/register_button_text"
        android:textColor="@color/White_Out"
        android:textSize="20sp" />

  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

